--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 html,body{
     height: 100vh;
     width: 100vw;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Castoro', serif;
 }
 .background{
     display: flex;
@@ -72,6 +72,7 @@ html,body{
     color: white;
     font-size: 80px;
     padding: 0px 125px;
+    font-weight: 400;
 }
 #center p{
     padding: 20px 125px;
@@ -116,6 +117,12 @@ html,body{
     width: 50%;
     background-color: rgb(1, 29, 22);
 }
+#box{
+    height: 80%;
+    width: 60%;
+    /* background-color: yellow; */
+    margin: 5% 20% 5% 10%;
+}
 #text{
     display: flex;
     height: 60%;
@@ -125,10 +132,31 @@ html,body{
 }
 #text #num{
     color: white;
-    font-size: 70px;
+    font-size: 50px;
+    font-weight: 300;
 }
 #text #ltr{
     color: white;
     font-size: 15px;
-    padding: 30px 0 0 30px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    padding: 18px 0 0 20px;
+}
+#arrow{
+    color: white;
+    font-size: 40px;
+}
+#lineelem{
+    display: flex;
+   padding: 10px 0 0 12px;
+}
+#lineelem #lineelemf{
+    height: 2px;
+    width: 50px;
+    background-color: white;
+}
+#lineelem #lineeleml{
+   height: 2px;
+   width: 150px;
+   background-color: rgba(255, 255, 255, 0.301);
 }
