--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 html,body{
     height: 100vh;
     width: 100vw;
-    font-family: 'Castoro', serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .background{
     display: flex;
